--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -99,7 +99,7 @@
         android:lineHeight="20dp"
         android:textSize="18dp"
         android:textAllCaps="false"
-        android:text="Reset Password"
+        android:text="Cofirm"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_width="295dp"
