--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,6 @@
     tools:context=".Activities.RegisterActivity">
 
     <ImageView
-
         android:id="@+id/imgBackRegister"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -139,6 +138,10 @@
                 app:passwordToggleEnabled="true">
 
                 <EditText
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:imeOptions="actionNext"
+                    android:nextFocusDown="@id/edtConfirmPassword"
                     android:id="@+id/edtPasswordRegister"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -268,9 +271,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 app:errorEnabled="true"
+                app:passwordToggleEnabled="true"
                 android:hint="Confirm Password">
 
                 <EditText
+                    android:inputType="textPassword"
                     android:id="@+id/edtConfirmPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -325,6 +330,7 @@
                 android:hint="First Name">
 
                 <EditText
+                    android:inputType="text"
                     android:id="@+id/edtFirstName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -344,6 +350,8 @@
                 android:hint="Last Name">
 
                 <EditText
+                    android:inputType="text"
+
                     android:id="@+id/edtLastName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -448,7 +456,7 @@
                 android:hint="Address">
 
                 <EditText
-
+                    android:imeOptions="actionDone"
                     android:id="@+id/edtAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
