--- a/app/src/main/res/layout/activity_register_success.xml
+++ b/app/src/main/res/layout/activity_register_success.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingHorizontal="30dp"
     android:gravity="center_horizontal"
-    tools:context=".Activities.RegisterSuccessActivity">
+    tools:context=".Activities.SuccessActivity">
     <ImageView
         android:layout_marginTop="20dp"
         android:id="@+id/imgLogoOnBoardingScreen"
@@ -28,6 +28,7 @@
         android:text="All Done"
         />
     <TextView
+        android:id="@+id/tvNoti"
         android:layout_marginTop="25dp"
         android:lineHeight="20dp"
         android:textSize="15dp"
